# rc-decision-engine

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  map_simulation.html  pyproject.toml  requirements.txt  roadview_sim.html  simulation.html  simulation3d.html
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/app/assets/: router.py  schemas.py  service.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/calibration/: router.py  schemas.py  service.py
backend/app/db/: influxdb.py  minio_client.py  models.py  postgres.py
backend/app/decisions/: router.py  schemas.py  service.py
backend/app/projects/: router.py  schemas.py  service.py
backend/app/reports/: pdf_generator.py  router.py  schemas.py  service.py
backend/app/reports/templates/: report_base.html
backend/app/sensors/: consumer.py  router.py  schemas.py  service.py
backend/app/simulation/: router.py  schemas.py  service.py  tasks.py
backend/engine/: __init__.py  report_generator.py  rule_engine.py  spray_simulation.py
docker/: backend.Dockerfile  worker.Dockerfile
docker/influxdb/: setup.sh
docs/: CTO_STRATEGY.md  MASTER_ARCHITECTURE.md
engine/: __init__.py
engine/calibration/: __init__.py  calibrator.py  drift_detector.py  imputation.py
engine/decision/: __init__.py  judge.py  monte_carlo.py  safety_factor.py
engine/domain/: __init__.py  constants.py  enums.py  models.py
engine/environment/: __init__.py  climate.py  gis_context.py
engine/physics/: __init__.py  base.py  navier_stokes.py  spray_coverage.py  thermodynamics.py
engine/pinns/: __init__.py  base_model.py  inference.py  navier_stokes_pinn.py  thermal_pinn.py  trainer.py
examples/: demo_gangwon_road.py  demo_project.json  demo_report.txt
scripts/: seed_db.py  setup_influxdb.py
src/: cli.py
src/judgment/: rule_engine.py
src/layers/: gis_reality.py
src/models/: neutral_model.py
src/report/: report_generator.py
src/simulation/: spray_simulation.py
tests/: conftest.py  test_neutral_model.py  test_simulation.py
tests/test_api/: test_health.py
tests/test_engine/: test_judge.py  test_monte_carlo.py  test_physics.py
