[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-decision-engine"
version = "0.1.0"
description = "Reality-Calibrated Decision Support System for Civil Engineering"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # InfluxDB
    "influxdb-client[async]>=1.44.0",
    # RabbitMQ
    "aio-pika>=9.4.0",
    # MinIO / S3
    "minio>=7.2.0",
    # Redis + Celery
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    # PDF Reports
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    # Scientific
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    # PINNs (PyTorch)
    "torch>=2.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
